WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231760
AX: checkboxes don't respect `indeterminate` IDL attribute state
https://bugs.webkit.org/show_bug.cgi?id=231760
Summary
AX: checkboxes don't respect `indeterminate` IDL attribute state
Scott
Reported
2021-10-14 12:39:46 PDT
There appears to have been a regression in the support for a native HTML checkbox's indeterminate IDL attribute, as recent testing has shown that it is returning the unchecked value (0) rather than the mixed value (2) when specified. Test case:
https://scottaohara.github.io/tests/attr-indeterminate/
Reviewing with the accessibility checker, the native checkboxes are returning a value of 0 when given the indeterminate IDL attribute. I found these previous issues which reported on this bug, and were closed as fixed (hence assuming this is a regression). I am linking to them here in hopes that they might be somehow helpful in fixing this new instance of the mixed state not being properly exposed.
https://bugs.webkit.org/show_bug.cgi?id=158876
https://bugs.webkit.org/show_bug.cgi?id=134492
Thanks
Attachments
Patch
(19.25 KB, patch)
2022-12-23 11:48 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-10-14 12:39:56 PDT
<
rdar://problem/84269311
>
Tyler Wilcock
Comment 2
2022-12-23 11:48:56 PST
Created
attachment 464184
[details]
Patch
EWS
Comment 3
2022-12-23 16:56:08 PST
Committed
258314@main
(4160624d7f96): <
https://commits.webkit.org/258314@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464184
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug